Primeros pasos con html y css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Aprendiendo Git</h1>
-	<p>Git es un software de control de versiones diseñado por linus torwalds.</p>
+	<p>Git es un <strong style="font-weight:normal;color:green">software</strong> de control de versiones diseñado por <a href="https://es.wikipedia.org/wiki/Linus_Torvalds" target="_blank">linus torvalds</a>.</p>
 	<p>Prueba ssh</p>
 </body>
 </html>
