--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 <head>
 	<meta charset="utf-8">
 	<title>Tikipedia</title>
+	<link rel="shortcut icon" href="./img/icon.png" />
 	<link rel="stylesheet" type="text/css" href="./estilos.css">
 </head>
 <body>
-	<img src="./img/avengers.png">
-	<h1>THE AVENGERS</h1>
-	<p>Los <strong>Vengadores</strong>(en inglés <strong>Avengers</strong>; los <em> Invencibles del siglo XX </em>en antiguas traducciones de México realizadas por EditorialLa Prensa) son un equipo ficticio de superhéroes queaparecen en cómics estadounidenses publicados por <a href="" style="text-decoration: none">Marvel Comics</a>. El equipo hizo su debut en The Avengers #1 (septiembre de 1963), creado por el escritor y editor Stan Lee yel artista/copiloto Jack Kirby. Los Vengadores es la renovación de Lee y Kirby de un equipo anterior de superhéroes,Escuadrón Todos los Ganadores, que apareció en la serie decómics publicada por el predecesor de Marvel Comics, TimelyComics. </p>
-	<p>Etiquetados como los Héroes más poderosos de la Tierra, los Vengadores originalmente consistían en <a href="" style="text-decoration: none">Ant-Man</a>, <a href="" style="text-decoration: none">Hulk</a>, <a href=""style="text-decoration: none">Iron Man</a>, <a href="" style="text-decoration: none">Thor</a> y <a href="" style="text-decoration: none">Avispa</a>. Ant-Man se convirtió en Giant-Man por el número 2. El <a href="" style="text-decoration: none">Capitán América</a> original fue descubiertoatrapado en hielo en el número 4, y se unió al grupo después deque lo revivieron. Una lista rotativa se convirtió en un sello distintivo de la serie, aunque un tema se mantuvo constante: los Vengadores luchan "contra los enemigos que ningún superhéroe puede soportar". El equipo, famoso por su grito debatalla de «¡Vengadores unidos!», ha presentado humanos, mutantes, inhumanos, androides, alienígenas, seres sobrenaturales e incluso antiguos villanos.</p>
-	<p>El equipo ha aparecido en una amplia variedad de medios fuerade los cómics, incluyendo una serie de diferentes series de televisión animadas y películas directas a video. La película deacción en vivo de 2012 The Avengers, dirigida por Joss Whedon, estableció numerosos récords durante su funcionamiento de taquilla, incluido uno de los primeros debutsde apertura en América del Norte, con un brote de fin desemana de $ 207.4 millones. La secuela, Avengers: Age of Ultron, fue lanzado el 1 de mayo de 2015, seguido por Avengers: Infinity War, que se convirtió en la primera película de superhéroes a bruto más de $2 mil millones, fue lanzado el 27 de abril de 2018. Su secuela, Avengers: End game, está programada para su estreno el 26 de abril de 2019. El 7 dediciembre se estrenó el primer tráiler de la película siendo el vídeo más visto de YouTube con 284 millones de visionados en apenas 24 horas.</p>
+	<div class="fondo">
+		<video autoplay muted loop>
+	  		<source src="E:\PABLO\EANT\FullStack\PWFE-M1-14\video\intro.mp4" type="video/mp4">
+		</video>
+
+	</div>
+	<div class="titulo">
+		<img class="avengers" src="E:\PABLO\EANT\FullStack\PWFE-M1-14\img\avengers2.png">
+		<h1>The Avengers</h1>
+	</div>
+		<div class="row">
+		<div class="col1">
+			<p>Los <strong>Vengadores</strong> (en inglés <strong>Avengers</strong>; los <em> Invencibles del siglo XX </em>en antiguas traducciones de México realizadas por Editorial La Prensa) son un equipo ficticio de superhéroes queaparecen en cómics estadounidenses publicados por <a href="https://es.wikipedia.org/wiki/Marvel_Comics">Marvel Comics</a>. El equipo hizo su debut en The Avengers #1 (septiembre de 1963), creado por el escritor y editor Stan Lee y el artista/ copiloto Jack Kirby. Los Vengadores es la renovación de Lee y Kirby de un equipo anterior de superhéroes, Escuadrón Todos los Ganadores, que apareció en la serie de cómics publicada por el predecesor de Marvel Comics, Timely Comics. </p>
+		</div>
+		<div class="col2">
+			<img class="marvel"src="./img/marvel.png">
+		</div>
+	</div>
+	
+	<p>Etiquetados como los Héroes más poderosos de la Tierra, los Vengadores originalmente consistían en <a href="https://es.wikipedia.org/wiki/Hombre_Hormiga">Ant-Man</a>, <a href="https://es.wikipedia.org/wiki/Hulk">Hulk</a>, <a href="https://es.wikipedia.org/wiki/Iron_Man">Iron Man</a>, <a href="https://es.wikipedia.org/wiki/Thor">Thor</a> y <a href="https://es.wikipedia.org/wiki/Avispa_(c%C3%B3mic)">Avispa</a>. Ant-Man se convirtió en Giant-Man por el número 2. El <a href="https://es.wikipedia.org/wiki/Capit%C3%A1n_Am%C3%A9rica" >Capitán América</a> original fue descubierto atrapado en hielo en el número 4, y se unió al grupo después de que lo revivieron. Una lista rotativa se convirtió en un sello distintivo de la serie, aunque un tema se mantuvo constante: los Vengadores luchan "contra los enemigos que ningún superhéroe puede soportar". El equipo, famoso por su grito debatalla de «¡Vengadores unidos!», ha presentado humanos, mutantes, inhumanos, androides, alienígenas, seres sobrenaturales e incluso antiguos villanos.</p>
+	<p>El equipo ha aparecido en una amplia variedad de medios fuerade los cómics, incluyendo una serie de diferentes series de televisión animadas y películas directas a video. La película de acción en vivo de 2012 The Avengers, dirigida por Joss Whedon, estableció numerosos récords durante su funcionamiento de taquilla, incluido uno de los primeros debutsde apertura en América del Norte, con un brote de fin de semana de $ 207.4 millones. La secuela, Avengers: Age of Ultron, fue lanzado el 1 de mayo de 2015, seguido por Avengers: Infinity War, que se convirtió en la primera película de superhéroes a bruto más de $2 mil millones, fue lanzado el 27 de abril de 2018. Su secuela, Avengers: End game, está programada para su estreno el 26 de abril de 2019. El 7 dediciembre se estrenó el primer tráiler de la película siendo el vídeo más visto de YouTube con 284 millones de visionados en apenas 24 horas.</p>
+	<img class="portada" src="./img/avengers-banner.jpg" alt=" Banner de The Avengers">
+	<audio autoplay controls="controls">
+		<source src="E:\PABLO\EANT\FullStack\PWFE-M1-14\music\avengers.mp3" type="audio/mp3">
+	</audio>
+	
 </body>
 </html>
