--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
 			<source src="E:\PABLO\EANT\FullStack\PWFE-M1-14\music\avengers.mp3" type="audio/mp3">
 		</audio>
 		<script src="js/main.js"></script>
+		<script>
+			//poner las llamadas a funciones aca
+			document.querySelector(".portada").onclick = saludar
+		</script>
 	</body>
 </html>
