Correcion de css

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 			<video autoplay muted loop>
 		  		<source src="E:\PABLO\EANT\FullStack\PWFE-M1-14\video\intro.mp4" type="video/mp4">
 			</video>
-
 		</div>
 		<div class="titulo">
 			<img class="avengers" src="E:\PABLO\EANT\FullStack\PWFE-M1-14\img\avengers2.png">
 			<h1>The Avengers</h1>
 		</div>
 			<div class="row">
-			<div class="col1">
-				<p>Los <strong>Vengadores</strong> (en inglés <strong>Avengers</strong>; los <em> Invencibles del siglo XX </em>en antiguas traducciones de México realizadas por Editorial La Prensa) son un equipo ficticio de superhéroes queaparecen en cómics estadounidenses publicados por <a href="https://es.wikipedia.org/wiki/Marvel_Comics">Marvel Comics</a>. El equipo hizo su debut en The Avengers #1 (septiembre de 1963), creado por el escritor y editor Stan Lee y el artista/ copiloto Jack Kirby. Los Vengadores es la renovación de Lee y Kirby de un equipo anterior de superhéroes, Escuadrón Todos los Ganadores, que apareció en la serie de cómics publicada por el predecesor de Marvel Comics, Timely Comics. </p>
-			</div>
+				<div class="col1">
+					<p>Los <strong>Vengadores</strong> (en inglés <strong>Avengers</strong>; los <em> Invencibles del siglo XX </em>en antiguas traducciones de México realizadas por Editorial La Prensa) son un equipo ficticio de superhéroes queaparecen en cómics estadounidenses publicados por <a id="mc"href="https://es.wikipedia.org/wiki/Marvel_Comics">Marvel Comics</a>. El equipo hizo su debut en The Avengers #1 (septiembre de 1963), creado por el escritor y editor Stan Lee y el artista/ copiloto Jack Kirby. Los Vengadores es la renovación de Lee y Kirby de un equipo anterior de superhéroes, Escuadrón Todos los Ganadores, que apareció en la serie de cómics publicada por el predecesor de Marvel Comics, Timely Comics. </p>
+				</div>
 			<div class="col2">
 				<img class="marvel"src="./img/marvel.png">
 			</div>
