--- a/CrossFitJS/ejercicio_2.html
+++ b/CrossFitJS/ejercicio_2.html
@@ -28,20 +28,19 @@
 		<aside>
 			<p>Modificar el texto del titular utilizando javascript</p>
 		</aside>
-
 		<script>
 			/* 1) Seleccionar el h1 y guardarlo en una variable */
-
+			var titulo = document.querySelector("h1")
 			/* 2) Modificar el texto interno de esta variable */
-
+			//titulo.innerText = "HOla"
 			/* 3) Una vez que funcione, probar poniendo el <script> en el <head> para corroborar que JavaScript se ejecuta secuencialmente! */
 
 			// EXTRA: Explicacion de Manipulaciones
 
 			/* 1) Manipulacion de Contenido */
-
+			titulo.innerHTML = "Estoy <em>manipulando</em> el contenido del h1"
 			/* 2) Manipulacion de Estructura */
-
+			titulo.style.color = "red"
 			/* 3) Manipulacion de Comportamiento */
 		</script>
 	</body>
