--- a/CrossFitJS/ejercicio_5.html
+++ b/CrossFitJS/ejercicio_5.html
@@ -37,16 +37,23 @@
 		<script>
 			function calcularIVA(){
 				/* 1) Seleccionar el campo numérico y guardarlo en una variable */
-
+				var precio = document.querySelector("input#precio")
 				/* 2) Obtener el valor del campo */
-
+				var valor = precio.value * 1.21
 				/* 3) Escribir en el span el valor del campo + IVA */
-
+				document.querySelector(".total").innerText = valor 
 				/* 4) Si el valor con iva es superior a 100 asignar la clase "alerta" al mensaje, si es menor entonces quitarla */
+				if (valor > 100) {
+					document.querySelector("p.mensaje").classList.add("alerta")
+				}
+				else{
+					document.querySelector("p.mensaje").classList.remove("alerta")
+				}
 			}
 			/* 5) seleccionar el boton y guardarlo en una variable */
-
+			var boton = document.querySelector("#calcular")
 			/* 6) asignar al click del boton la funcion calcularIVA */
+			boton.onclick = calcularIVA
 		</script>
 	</body>
 </html>
