--- a/CrossFitJS/ejercicio_7.html
+++ b/CrossFitJS/ejercicio_7.html
@@ -59,19 +59,33 @@
 
 		<script>
 			/* 1) Seleccionar todas las habitaciones */
-
+			let habitaciones = document.querySelectorAll(".habitacion")
 			/* 2) Seleccionar el select */
-
+			let menu = document.querySelector("select[name=habitacion")
 			/* 3) Asignar la funcion mostrarOpcion al evento correspondiente */
-
+			menu.onchange = mostrarOpcion
 			/* 4) Pensar una solucion logica para esconder todas las habitaciones cada vez que sea necesario */
+			//debugger
+			window.onload = esconderTodo
 
+			function esconderTodo()
+			{
+				for(let i = 0; i < habitaciones.length; i++)
+				{
+					habitaciones[i].classList.add("esconder")
+				}
+			}
 			function mostrarOpcion(){
+
+				esconderTodo()
 				/* 5) Obtener la opción seleccionada */
-
+				let opcion = menu.value
+				if(opcion == 0) return
 				/* 6) Seleccionar la habitación correspondiente usando un selector dinámico */
-
-				/* 7) Asignar la clase correspondiente */
+				let elegida = document.querySelector(`.habitacion-${opcion}`)
+				console.log(elegida)
+				/* 7) Remover la clase correspondiente */
+				elegida.classList.remove("esconder")
 			}
 		</script>
 	</body>
